--- a/ParallelLowPassFilter/ParallelLowPassFilter.vcxproj.filters
+++ b/ParallelLowPassFilter/ParallelLowPassFilter.vcxproj.filters
@@ -15,14 +15,28 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Sequential.cpp">
+    <ClCompile Include="LPF_Sequential.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="openMP.cpp">
+    <ClCompile Include="LPF_OpenMP.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="MPI.cpp">
+    <ClCompile Include="LPF_MPI.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="LPF_MPI.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LPF_OpenMP.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="LPF_Sequential.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
